# fast-fast-whisper

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt  start.bat  test_device.py
scripts/: check_import.py
