[project]
name = "fast-fast-whisper"
version = "0.1.0"
description = "Local OpenAI-compatible API for audio transcription/translation using Whisper (faster-whisper) built with FastAPI"
authors = [
    { name = "Artasov", email = "ivanhvalevskey@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["whisper", "speech-to-text", "transcription", "fastapi", "openai", "audio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "python-multipart>=0.0.20",
    "faster-whisper>=1.0.3",
    "webvtt-py>=0.5.1",
    "av==12.3.0",
    "hf-xet (>=1.1.10,<2.0.0)"
]

[project.urls]
Homepage = "https://github.com/artasov/fast-fast-whisper"
Repository = "https://github.com/artasov/fast-fast-whisper"
Issues = "https://github.com/artasov/fast-fast-whisper/issues"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
